Removed cp_events.c duplicate.

--- a/dae/Makefile
+++ b/dae/Makefile
@@ -9,16 +9,18 @@ CFLAGS=-Wall -Wstrict-prototypes -O2 -pipe -Wstrict-prototypes -Wunused -W -Wsha
 LIBS=-lpopt
 INCLUDES= 
 HEADERS=cprofiled.h
-SOURCES=cprofiled.c cpd_util.c cpd_proc.c cp_events.c
+SOURCES=cprofiled.c cpd_util.c cpd_proc.c ../cp_events.c
  
 srcdoc: $(SOURCES)
 	kernel-doc -html $(SOURCES) >cprofiled-src.html
  
 cprofiled: $(SOURCES) $(HEADERS) 
+	rm -f ../cp_events.o 
 	$(CC) $(CFLAGS) $(INCLUDES) -g -o $@ $(SOURCES) $(LIBS)
 
-cp_help: cp_events.c
-	$(CC) $(CFLAGS) -DCP_EVENTS_DESC -DCP_EVENTS_MAIN $(INCLUDES) -g -o cp_help cp_events.c
+cp_help: ../cp_events.c
+	rm -f ../cp_events.o
+	$(CC) $(CFLAGS) -DCP_EVENTS_DESC -DCP_EVENTS_MAIN $(INCLUDES) -g -o cp_help ../cp_events.c
 
 rdtsc: rdtsc.c
 	$(CC) $(CFLAGS) $(INCLUDES) -o rdtsc rdtsc.c 
