--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.1 2000/08/03 02:39:33 moz Exp $
+# $Id: Makefile.in,v 1.2 2000/08/03 03:00:11 moz Exp $
  
 KCPPFLAGS=@KCPPFLAGS@
 MODINSTALLDIR=@MODINSTALLDIR@
@@ -9,6 +9,9 @@ all: oprofile.o
 	$(MAKE) -C dae
 	$(MAKE) -C pp
 
+distclean: clean
+	rm -f Makefile dae/Makefile pp/Makefile
+ 
 install: oprofile.o
 	cp oprofile.o $(MODINSTALLDIR)
 	$(MAKE) -C dae install 
