--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,13 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.2 2000/08/03 03:00:40 moz Exp $)
+AC_SUBST(PACKAGE)
+AC_SUBST(VERSION)
+PACKAGE=oprofile
+VERSION=0.0.1
+ 
+ 
+AC_REVISION($Id: configure.in,v 1.3 2000/08/03 03:19:03 moz Exp $)
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -138,4 +144,4 @@ AC_CHECK_LIB(iberty, cplus_demangle,, AC_MSG_ERROR(liberty library not found))
 AC_CHECK_LIB(dl, dlopen,, AC_MSG_ERROR(dl library not found)) 
 AC_CHECK_LIB(bfd, bfd_openr,, AC_MSG_ERROR(bfd library not found))
  
-AC_OUTPUT(Makefile dae/Makefile pp/Makefile)
+AC_OUTPUT(Makefile dae/Makefile pp/Makefile version.h)
