--- a/Makefile.in
+++ b/Makefile.in
@@ -1,51 +1,52 @@
-# $Id: Makefile.in,v 1.6 2000/08/07 04:19:34 moz Exp $
- 
-KCPPFLAGS=@KCPPFLAGS@
+# $Id: Makefile.in,v 1.7 2000/08/08 03:21:05 moz Exp $
+
+KCFLAGS=@KCFLAGS@
 MODINSTALLDIR=@MODINSTALLDIR@
-CC=@CC@ 
-LD=@LD@ 
- 
+CC=@CC@
+LD=@LD@
+
 .PHONY: all install clean distclean tags
- 
+
 all: oprofile.o
 	$(MAKE) -C dae
 	$(MAKE) -C pp
 
 distclean: clean
 	rm -f Makefile dae/Makefile pp/Makefile tags
- 
+
 tags:
 	ctags -R
- 
+
 install: oprofile.o
 	cp oprofile.o $(MODINSTALLDIR)
-	$(MAKE) -C dae install 
-	$(MAKE) -C pp install 
- 
+	depmod -a
+	$(MAKE) -C dae install
+	$(MAKE) -C pp install
+
 clean:
 	rm -f *.o config.status config.log config.cache
 	$(MAKE) -C dae clean
-	$(MAKE) -C pp clean 
- 
+	$(MAKE) -C pp clean
+
 # FIXME: move NMI code into separate to allow -march=ppro for that
-KCFLAGS:=-D__KERNEL__ -Wall -Wstrict-prototypes -O2 -fomit-frame-pointer -pipe  -march=i586 -fno-strict-aliasing -DMODULE -Wunused $(KCPPFLAGS) $(KCFLAGS)
- 
-ASMFLAGS=-D__ASSEMBLY__ -D__KERNEL__ -traditional
- 
-oprofile.o: oprofile_c.o oprofile_nmi.o oprofile_k.o op_events.o 
+KCFLAGS:=-pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -march=i586 -fomit-frame-pointer -fno-strict-aliasing $(KCFLAGS)
+
+ASMFLAGS=-D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional
+
+oprofile.o: oprofile_c.o oprofile_nmi.o oprofile_k.o op_events.o
 	ld -r -o $(G) $@ oprofile_c.o oprofile_nmi.o oprofile_k.o op_events.o
 
 oprofile_c.o: oprofile.c oprofile.h
-	$(CC) $(KCFLAGS) $(G) -c -o $@ $< 
+	$(CC) $(KCFLAGS) $(G) -c -o $@ $<
 
 oprofile_k.o: oprofile_k.c oprofile.h
-	$(CC) $(KCFLAGS) $(G) -c -o $@ $< 
+	$(CC) $(KCFLAGS) $(G) -c -o $@ $<
 
 oprofile.s: oprofile.c oprofile.h
 	$(CC) $(KCFLAGS) $(G) -S $<
- 
+
 op_events.o: op_events.c
-	$(CC) $(KCFLAGS) $(G) -c -o $@ $< 
- 
+	$(CC) $(KCFLAGS) $(G) -c -o $@ $<
+
 oprofile_nmi.o: oprofile_nmi.S
 	$(CC) $(ASMFLAGS) -c -o $@ $<
