--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.9 2000/08/08 03:21:05 moz Exp $)
+AC_REVISION($Id: configure.in,v 1.10 2000/08/17 22:48:24 moz Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./oprofile.c)
 
@@ -119,7 +119,8 @@ test "$nmipatch" = 1 && KCFLAGS="$KCFLAGS -DOP_EXPORTED_DO_NMI"
 KCFLAGS="-I$KINC $KCFLAGS"
 AC_SUBST(KCFLAGS)
 
-MODINSTALLDIR=/lib/modules/$KVERS/misc
+MODINSTALLDIR=/lib/modules/$KVERS/kernel/arch/i386/kernel
+ 
 AC_ARG_WITH(module-dir,
 [  --with-module-dir=dir        Path to module installation directory], MODINSTALLDIR=$withval)
 AC_SUBST(MODINSTALLDIR)
