--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.10 2000/08/17 22:48:24 moz Exp $)
+AC_REVISION($Id: configure.in,v 1.11 2000/08/28 17:09:21 moz Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./oprofile.c)
 
@@ -124,6 +124,9 @@ MODINSTALLDIR=/lib/modules/$KVERS/kernel/arch/i386/kernel
 AC_ARG_WITH(module-dir,
 [  --with-module-dir=dir        Path to module installation directory], MODINSTALLDIR=$withval)
 AC_SUBST(MODINSTALLDIR)
+
+AC_ARG_ENABLE(filter,
+[  --enable-filter              Enable filtering on pid or pgrp value feature], KCFLAGS="$KCFLAGS -DPID_FILTER")
 
 dnl --- user space configuration ---
 
