--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.11 2000/08/28 17:09:21 moz Exp $)
+AC_REVISION($Id: configure.in,v 1.12 2000/12/12 02:55:32 moz Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./oprofile.c)
 
@@ -103,7 +103,9 @@ AC_MSG_CHECKING(for versioned modules)
 mv=0
 AX_COMPILE_OPTION(CONFIG_MODVERSIONS,mv=1,mv=0)
 AX_MSG_RESULT_YN($mv)
-test "$mv" = 1 && AC_DEFINE(MODVERSIONS)
+MODVERSIONS=""
+test "$mv" = 1 && MODVERSIONS="-DMODVERSIONS"
+AC_SUBST(MODVERSIONS)
 
 AC_MSG_CHECKING(for local APIC)
 AX_COMPILE_OPTION(CONFIG_X86_LOCAL_APIC,apic=1,apic=0)
@@ -119,7 +121,7 @@ test "$nmipatch" = 1 && KCFLAGS="$KCFLAGS -DOP_EXPORTED_DO_NMI"
 KCFLAGS="-I$KINC $KCFLAGS"
 AC_SUBST(KCFLAGS)
 
-MODINSTALLDIR=/lib/modules/$KVERS/kernel/arch/i386/kernel
+MODINSTALLDIR=/lib/modules/$KVERS
  
 AC_ARG_WITH(module-dir,
 [  --with-module-dir=dir        Path to module installation directory], MODINSTALLDIR=$withval)
