--- a/dae/Makefile.in
+++ b/dae/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.6 2000/12/12 02:55:34 moz Exp $
+# $Id: Makefile.in,v 1.7 2001/01/21 01:11:56 moz Exp $
 
 .PHONY: all clean srcdoc install
  
@@ -23,7 +23,7 @@ clean:
 CFLAGS=-Wall -Wstrict-prototypes -O2 -pipe -Wstrict-prototypes -Wunused -W -Wshadow -Wmissing-prototypes -Winline @CFLAGS@
 LIBS=@extra_libraries@ -lpopt
 INCLUDES=@extra_includes@
-HEADERS=oprofiled.h opd_util.h
+HEADERS=oprofiled.h opd_util.h ../op_user.h ../version.h
 SOURCES=oprofiled.c opd_util.c opd_proc.c ../op_events.c
  
 srcdoc: oprofiled-src.html
