--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,6 @@
-# $Id: Makefile.in,v 1.12 2001/01/21 01:11:55 moz Exp $
+# $Id: Makefile.in,v 1.14 2001/02/05 11:37:59 movement Exp $
 
-KCFLAGS=@KCFLAGS@ @MODVERSIONS@
+BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
 CC=@CC@
 LD=@LD@
@@ -11,6 +11,9 @@ all: oprofile.o
 	$(MAKE) -C dae
 	$(MAKE) -C pp
 
+maintainerclean: distclean
+	rm -f configure
+ 
 distclean: clean
 	rm -f Makefile dae/Makefile pp/Makefile tags
 
@@ -45,26 +48,29 @@ clean:
 	$(MAKE) -C pp clean
 
 # FIXME: move NMI code into separate to allow -march=ppro for that
-KCFLAGS:=-pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -march=i586 -fomit-frame-pointer -fno-strict-aliasing $(KCFLAGS)
+BKCFLAGS += -pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -fomit-frame-pointer -fno-strict-aliasing
+KCFLAGS := $(BKCFLAGS) -march=i686
+ASMFLAGS := -D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional
 
-ASMFLAGS=-D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional
-
-oprofile.o: oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o
-	ld -r -o $(G) $@ oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o
+oprofile.o: op_init.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o
+	ld -r -o $@ op_init.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o
 
 oprofile.h: op_user.h version.h
 
+op_init.o: op_init.c oprofile.h
+	$(CC) $(BKCFLAGS) -c -o $@ $<
+ 
 oprofile_c.o: oprofile.c oprofile.h
-	$(CC) $(KCFLAGS) $(G) -c -o $@ $<
+	$(CC) $(KCFLAGS) -c -o $@ $<
 
 op_syscalls.o: op_syscalls.c oprofile.h
-	$(CC) $(KCFLAGS) $(G) -c -o $@ $<
+	$(CC) $(KCFLAGS) -c -o $@ $<
 
 oprofile.s: oprofile.c oprofile.h
-	$(CC) $(KCFLAGS) $(G) -S $<
+	$(CC) $(KCFLAGS) -S $<
 
 op_events.o: op_events.c
-	$(CC) $(KCFLAGS) $(G) -c -o $@ $<
+	$(CC) $(KCFLAGS) -c -o $@ $<
 
 oprofile_nmi.o: oprofile_nmi.S
 	$(CC) $(ASMFLAGS) -c -o $@ $<
