--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.17 2001/01/31 16:02:29 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.19 2001/02/05 11:37:59 movement Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./oprofile.c)
 
@@ -43,7 +43,7 @@ dnl AX_COMPILE_OPTION(option, action-if-found, action-if-not-found)
 dnl see if autoconf.h defines the option
 AC_DEFUN(AX_COMPILE_OPTION, [
 SAVE_CFLAGS=$CFLAGS
-CFLAGS="$KCFLAGS -I$KINC -O2 -D__KERNEL__"
+CFLAGS="$BKCFLAGS -I$KINC -O2 -D__KERNEL__"
 AC_TRY_COMPILE( [#include <linux/config.h>],
 [
 #ifndef $1
@@ -52,6 +52,9 @@ break_me_hard(\\\);
 ],[$2],[$3],)
 CFLAGS=$SAVE_CFLAGS
 ])
+
+AC_ARG_WITH(cc,    [  --with-cc=<kgcc>             C compiler used to compiler kernel], CC=$withval)
+AC_SUBST(CC)
 
 AC_PROG_CC
 test "$GCC" || AC_ERROR(You would not have much luck compiling kernel code with non-gcc...)
@@ -85,7 +88,7 @@ esac
 AC_MSG_CHECKING("whether $CC accepts -mpreferred-stack-boundary=2")
 SAVE_CFLAGS=$CFLAGS
 CFLAGS="-mpreferred-stack-boundary=2 $CFLAGS"
-AC_TRY_COMPILE(,,AC_MSG_RESULT("yes");KCFLAGS="-mpreferred-stack-boundary=2 $KCFLAGS",AC_MSG_RESULT("no"))
+AC_TRY_COMPILE(,,AC_MSG_RESULT("yes");BKCFLAGS="-mpreferred-stack-boundary=2 $BKCFLAGS",AC_MSG_RESULT("no"))
 CFLAGS=$SAVE_CFLAGS
 
 AC_MSG_CHECKING(for x86 architecture)
@@ -117,8 +120,8 @@ if test "$smp" = 0; then
   test "$apic" = 0 && AC_MSG_ERROR(local APIC not configured)
 fi
 
-KCFLAGS="-I$KINC $KCFLAGS"
-AC_SUBST(KCFLAGS)
+BKCFLAGS="-I$KINC $BKCFLAGS"
+AC_SUBST(BKCFLAGS)
 
 MODINSTALLDIR=/lib/modules/$KVERS
  
@@ -127,7 +130,7 @@ AC_ARG_WITH(module-dir,
 AC_SUBST(MODINSTALLDIR)
 
 AC_ARG_ENABLE(filter,
-[  --enable-filter              Enable filtering on pid or pgrp value feature], KCFLAGS="$KCFLAGS -DPID_FILTER")
+[  --enable-filter              Enable filtering on pid or pgrp value feature], BKCFLAGS="$BKCFLAGS -DPID_FILTER")
 
 dnl --- user space configuration ---
 
@@ -166,8 +169,8 @@ AC_SUBST(extra_includes)
 AC_SUBST(extra_libraries)
 
 AC_CHECK_LIB(popt, poptGetContext,, AC_MSG_ERROR(popt library not found))
-AC_CHECK_LIB(iberty, cplus_demangle,, AC_MSG_ERROR(liberty library not found))
 AC_CHECK_LIB(dl, dlopen,, AC_MSG_ERROR(dl library not found))
+AC_CHECK_LIB(iberty, cplus_demangle,, AC_MSG_ERROR(liberty library not found))
 AC_CHECK_LIB(bfd, bfd_openr,, AC_MSG_ERROR(bfd library not found))
 
 AC_OUTPUT(Makefile dae/Makefile pp/Makefile version.h)
