--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.19 2001/02/05 11:37:59 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.20 2001/04/05 13:24:42 movement Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./oprofile.c)
 
@@ -18,6 +18,10 @@ AC_SUBST(VERSION)
 PACKAGE=oprofile
 VERSION=0.0.3
 
+dnl for the man page
+DATE="`date '+%a %d %B %Y'`"
+AC_SUBST(DATE)
+ 
 dnl -- local macros -- 
  
 dnl AX_MSG_RESULT_YN(a)
@@ -173,4 +177,4 @@ AC_CHECK_LIB(dl, dlopen,, AC_MSG_ERROR(dl library not found))
 AC_CHECK_LIB(iberty, cplus_demangle,, AC_MSG_ERROR(liberty library not found))
 AC_CHECK_LIB(bfd, bfd_openr,, AC_MSG_ERROR(bfd library not found))
 
-AC_OUTPUT(Makefile dae/Makefile pp/Makefile version.h)
+AC_OUTPUT(Makefile dae/Makefile doc/Makefile doc/oprofile.1 pp/Makefile version.h)
