--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.26 2001/06/29 15:27:05 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.27 2001/06/29 20:19:28 movement Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./oprofile.c)
 
@@ -64,6 +64,7 @@ AC_SUBST(CC)
 AC_PROG_CC
 test "$GCC" || AC_ERROR(You would not have much luck compiling kernel code with non-gcc...)
 AC_PROG_CPP
+AC_PROG_CXX
 AC_CHECK_PROG(LD,ld,ld,)
 test "$LD" || AC_ERROR(ld not found)
 
