docs from philippe, and oprofile gui fixes

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.20 2001/07/14 13:00:16 movement Exp $
+# $Id: Makefile.in,v 1.21 2001/07/14 13:37:25 movement Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
@@ -27,9 +27,9 @@ dist:
 	(find -type d -name CVS | xargs rm -rf) ; \
 	autoconf ; \
 	./configure ; \
-	mv doc/Makefile doc/Makefile.tmp ; \
+	cp doc/Makefile doc/Makefile.tmp ; \
 	make distclean ; \
-	cd doc && make && rm -f Makefile.tmp && cd .. ; \
+	cd doc && make && rm -f Makefile && cd .. ; \
 	cd .. ; \
 	mv oprofile oprofile-@VERSION@ ; \
 	tar cvfz ../oprofile-@VERSION@.tar.gz oprofile-@VERSION@ ; \
