--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -1,9 +1,10 @@
-# $Id: Makefile.in,v 1.2 2001/04/06 14:16:46 movement Exp $
+# $Id: Makefile.in,v 1.3 2001/07/14 13:37:25 movement Exp $
 
 prefix=@prefix@
 MANDIR=@mandir@
 LN_S=ln -s
 RM=rm
+MKDIR=mkdir
 DB2HTML=db2html
 
 .PHONY: all clean install
@@ -11,6 +12,8 @@ DB2HTML=db2html
 all:
 	-$(RM) -rf oprofile.junk
 	$(DB2HTML) oprofile.sgml
+	-$(MKDIR) html
+	-$(MKDIR) html/stylesheet-images/ 
 	-mv oprofile/* html/
 	-mv oprofile/stylesheet-images/* html/stylesheet-images/
 	-$(RM) -rf oprofile 
