--- a/pp/Makefile.in
+++ b/pp/Makefile.in
@@ -24,9 +24,9 @@ install: oprofpp oprof_convert opf_filter op_to_source
 CFLAGS=-Wall -Wstrict-prototypes -W -pipe -DOP_EVENTS_DESC -L/usr/lib @CFLAGS@
 LIBS=-lpopt -lbfd -liberty -ldl
 INCLUDES=@extra_includes@
-HEADERS=oprofpp.h ../dae/opd_util.h ../dae/md5.h
+HEADERS=oprofpp.h ../dae/opd_util.h
 MY_SOURCES=oprofpp.c
-SOURCES=$(MY_SOURCES) ../dae/opd_util.c ../op_events.c ../dae/md5.c
+SOURCES=$(MY_SOURCES) ../dae/opd_util.c ../op_events.c
 
 srcdoc: oprofpp-src.html
 
