tentative fix for no-symbol modules case

--- a/dae/Makefile.in
+++ b/dae/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.10 2001/07/25 02:22:44 movement Exp $
+# $Id: Makefile.in,v 1.11 2001/07/26 01:39:16 movement Exp $
 
 .PHONY: all clean srcdoc install
  
@@ -22,7 +22,7 @@ clean:
  
 CFLAGS=-Wall -Wstrict-prototypes -O2 -pipe -Wstrict-prototypes -Wunused -W -Wshadow -Wmissing-prototypes -Winline @CFLAGS@
 LIBS=@extra_libraries@ -lpopt
-INCLUDES=@extra_includes@
+INCLUDES=-I. @extra_includes@
 HEADERS=oprofiled.h opd_util.h ../op_user.h ../version.h
 SOURCES=oprofiled.c opd_util.c opd_proc.c ../op_events.c
  
