--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -1,8 +1,8 @@
-# $Id: Makefile.in,v 1.3 2001/07/14 13:37:25 movement Exp $
+# $Id: Makefile.in,v 1.4 2001/07/27 00:28:44 movement Exp $
 
 prefix=@prefix@
 MANDIR=@mandir@
-LN_S=ln -s
+LN_SF=ln -sf
 RM=rm
 MKDIR=mkdir
 DB2HTML=db2html
@@ -20,10 +20,10 @@ all:
  
 install:
 	cp oprofile.1 $(MANDIR)/man1/oprofile.1
-	-$(LN_S) $(MANDIR)/man1/oprofile.1 $(MANDIR)/man1/oprofiled.1
-	-$(LN_S) $(MANDIR)/man1/oprofile.1 $(MANDIR)/man1/op_start.1
-	-$(LN_S) $(MANDIR)/man1/oprofile.1 $(MANDIR)/man1/op_stop.1
-	-$(LN_S) $(MANDIR)/man1/oprofile.1 $(MANDIR)/man1/op_help.1
-	-$(LN_S) $(MANDIR)/man1/oprofile.1 $(MANDIR)/man1/oprofpp.1
+	-$(LN_SF) $(MANDIR)/man1/oprofile.1 $(MANDIR)/man1/oprofiled.1
+	-$(LN_SF) $(MANDIR)/man1/oprofile.1 $(MANDIR)/man1/op_start.1
+	-$(LN_SF) $(MANDIR)/man1/oprofile.1 $(MANDIR)/man1/op_stop.1
+	-$(LN_SF) $(MANDIR)/man1/oprofile.1 $(MANDIR)/man1/op_help.1
+	-$(LN_SF) $(MANDIR)/man1/oprofile.1 $(MANDIR)/man1/oprofpp.1
  
 clean:
