I got bored of typing echo 1 >/proc/sys/dev/oprofile/dump ...

--- a/dae/Makefile.in
+++ b/dae/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.11 2001/07/26 01:39:16 movement Exp $
+# $Id: Makefile.in,v 1.12 2001/08/11 01:45:54 movement Exp $
 
 .PHONY: all clean srcdoc install
  
@@ -10,12 +10,13 @@ BINDIR=@bindir@
 MANDIR=@mandir@
 CC=@CC@
 
-install: oprofiled op_start op_stop op_help
+install: oprofiled op_start op_dump op_stop op_help
 	cp oprofiled $(BINDIR)/oprofiled
 	cp op_start $(BINDIR)/op_start
+	cp op_dump $(BINDIR)/op_dump
 	cp op_stop $(BINDIR)/op_stop
 	cp op_help $(BINDIR)/op_help
-	cd $(BINDIR) && chmod 755 oprofiled op_start op_stop op_help
+	cd $(BINDIR) && chmod 755 oprofiled op_start op_dump op_stop op_help
  
 clean:
 	rm -f oprofiled  op_help *.o oprofiled-src.html 
