--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -7,7 +7,9 @@ clean:
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 BINDIR=@bindir@
+MKDIR_P=mkdir -p
 
 install: oprofile
+	-$(MKDIR_P) $(BINDIR)
 	cp oprofile $(BINDIR)/oprofile
 	cd $(BINDIR) && chmod 755 oprofile
