--- a/pp/Makefile.in
+++ b/pp/Makefile.in
@@ -10,8 +10,10 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 BINDIR=@bindir@
 MANDIR=@mandir@
+MKDIR_P=mkdir -p
 
 install: oprofpp oprof_convert opf_filter op_to_source
+	-$(MKDIR_P) $(BINDIR)
 	cp oprofpp $(BINDIR)/oprofpp
 	chmod 755 $(BINDIR)/oprofpp
 	cp oprof_convert $(BINDIR)/oprof_convert
